--- a/Changelog
+++ b/Changelog
@@ -10,6 +10,11 @@ Release Checklist
 - gitt-tag "vX.Y.Z"
 - pod trunk push
 
+Intended v1.0.0
++ Remove `WVPResponse -respondWithError:text:`
++ Add `WVPResponse -respondWithStatusCode:text:`
++ Add README examples to clarify handling of errors using `WVPResponse pipeError:`
+
 v0.2.6
 + Add OSX back into podspec file
 
